tests/en/errors/unused_var.salam
// EXPECT: E059
func main:
 x auto = 5
 println("x")
end
